Commit do index.html do site do repositorio atualizado

--- a/site/index.html
+++ b/site/index.html
@@ -340,9 +340,10 @@
                 </a>
               </p>                        
             </p>
-          </div>        
-        <div class="card shadow text-center">
-          <div class="card-body text-center">
+          </div>
+        </div>        
+        <div class="card shadow">
+          <div class="card-body">
             <h5 class="card-title text-center">API Central de Erros</h5>
             <h6 class="card-subtitle mb-2 text-muted text-center">Desafio Final</h6>
             <p class="card-text">
