Commit do site do repositorio atualizado

--- a/site/index.html
+++ b/site/index.html
@@ -38,9 +38,15 @@
     <div class="container p-4">
       <div>
         <p class="text-justify">
-          O AceleraDev Python é um programa de formação de profissionais da área de desenvolvimento de software. O programa  
-          tem duração de 10 semanas e é voltado a estudantes e profissionais da área de tecnologia com exercícios
-          práticos de programação focados na realidade do mercado,além de mentorias exclusivas.
+          É um programa de aceleração gratuito para devs, onde cada edição tem foco em uma area da tecnologia e
+          uma empresa apoiadora que oferece bolsas de estudos. O programa é dividido em 10 módulos semanais com 
+          exercícios práticos de programação, desafios de desenvolvimento  focados na realidade do mercado,
+          além de mentorias exclusivas.
+        </p>
+        <p class="text-justify">
+          Para ser contemplada com a bolsa de estudo, tive que realizar um desafio de seleção e atingir o 
+          desempenho mínimo (100%) e passar à etapa de entrevistas. Essa aceleração na qual participei, 
+          a tecnologia abordada referiu-se ao desenvolvivento Backend em Python.
         </p>
         <p class="text-justify">
           Abaixo estão listados os respositórios contendo as minhas resoluções aos desafios de cada módulo.    
@@ -228,7 +234,7 @@
         </div>
         <div class="card shadow">
           <div class="card-body">
-            <h5 class="card-title text-center">Django REST Framework</h5></br>
+            <h5 class="card-title text-center">Django REST Framework</h5>
             <h6 class="card-subtitle mb-2 text-muted">Módulo 6</h6>
             <p class="card-text">
               <span class="v-ripple">
@@ -345,7 +351,7 @@
         <div class="card shadow">
           <div class="card-body">
             <h5 class="card-title text-center">API Central de Erros</h5>
-            <h6 class="card-subtitle mb-2 text-muted text-center">Desafio Final</h6>
+            <h6 class="card-subtitle mb-2 text-muted">Desafio Final</h6>
             <p class="card-text">
               <span class="v-ripple">
                 API
