Commit do site atualizado

--- a/site/index.html
+++ b/site/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bootcamp AceleraDev Python - Codenation</title>
+    <title>Rafaella Duarte</title>
             <!-- Favicon-->
             <link rel="shortcut icon"  href="./img/favicon.ico" />
             <link
@@ -316,14 +316,17 @@
             <h6 class="card-subtitle mb-2 text-muted">Módulo 9</h6>
             <p class="card-text">
               <span class="v-ripple">
-                EM ANDAMENTO
+                Integração contínua
+              </span>
+              <span class="v-ripple">
+                Configuração Travis CI
               </span>
             </p>
             <p class="cardfooter">
               <p>
                 <a
-                  href=""
-                  class="card-link" target="_blank">Aguardando
+                  href="https://github.com/elladarte/AceleraDev_Python/tree/master/Modulo%209/dessafio_continuous_integration"
+                  class="card-link" target="_blank">Desafio Continuos Integration
                 </a>
               </p>                        
             </p>
